# zdoom-macos-deps

./: .gitignore  .gitmodules  .travis.yml  build.py  build.sh  build_gzdoom  build_raze  dependencies.md  readme.md
.github/: linters
aedi/: __init__.py  builder.py  state.py  utility.py
core/: build.py
meson/: __main__.py
patch/: 7zip-fix-errors.diff  bzip2-add-cmake.diff  cmake-fix-xcode14.diff  ericw-tools-hardcode-version.diff  ffi.patch  flac-add-cmake.diff  flac-no-git.diff  fluidsynth-sf3-support.diff  fobos-static-install.diff  freeimage-fix-arm64.diff  freetype-config  ftgl-support-arm64.diff  glfw-fix-vsync.diff  glib-fix-paths.diff  glslang-old-cmake.diff  gme-no-ubsan.diff  hackrf-static-only.diff  lzma-add-cmake.diff  mad.patch  moltenvk-deployment-target.diff  mpg123-arm64-fpu.diff  mpg123-fix-cmake.diff  mpg123-have-fpu.diff  mpg123-no-syn123.diff  mpg123-xcompile-fpu.diff  nasm-deterministic-date.diff  ogg.patch  opus-fix-cmake.diff  opusfile-add-cmake.diff  pbzx-xar-content.diff  pcre.patch  portmidi-modernize-cmake.diff  quasi-glib.cpp  radare2-fix-build.diff  samplerate.patch  sdl2-no-gamecontroller+corehaptic.diff  sdl2-no-updaterev.diff  sdl2.patch  sdl2_mixer-fix-opusfile.diff  sdl2_ttf-fix-cmake.diff  (+8 more)
patch/quasi-glib/: CMakeLists.txt  quasi-glib-test.cpp  quasi-glib.cpp
test/: .gitignore  aedi.h  bzip2.cpp  flac.cpp  fluidsynth.cpp  freeimage.cpp  freetype2.cpp  glib-2.0.cpp  libbrotlidec.cpp  libbrotlienc.cpp  libgme.cpp  libjpeg.cpp  libmpg123.cpp  libpng16.cpp  libtiff-4.cpp  libwebp.cpp  libxmp.cpp  mad.cpp  ogg.cpp  openal.cpp  (+13 more)
(+30 files in other folders)
